deliver comments_feature_spec.rb and v1 of users_feature_spec.rb
1) Use factories for users, pictures, and comments.
2) Use DatabaseCleaner to:
    A) clear the test database
    B) delete the images from the public/system/pictures folder
       (see rails_helper.rb)
3) Make a few changes to Gemfile
4) WIP: support/controller_macros.rb
   (see https://github.com/plataformatec/devise/wiki/How-To:-Test-controllers-with-Rails-3-and-4-(and-RSpec) )

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,11 @@
 
 # Coveralls
 coverage/*
+
+# Folder used for testing image uploads
+# Cleared after tests with the following
+# (which is in rails_helper.rb)
+#config.after(:suite) do
+#  FileUtils.rm_rf(Dir["./public/system/pictures/images"])
+#end
+public/system/
